--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^5.5.0",
     "sanity": "^4.3.0",
     "sonner": "^2.0.5",
+    "stripe": "^18.4.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.7"
